# mydeck

./: .gitignore  LICENSE  MANIFEST.in  README.ja.md  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
docs/: create_your_games.md  make_your_app.md  make_your_game.md  openaction_plugins.md  releasing.md
docs/superpowers/plans/: 2026-04-10-totp-app.md  2026-04-17-device-resilience.md  2026-04-23-openaction-plugin-bridge.md
docs/superpowers/specs/: 2026-04-10-totp-app-design.md  2026-04-17-device-resilience-design.md  2026-04-22-pypi-packaging-design.md
example/: main.py  main_virtual.py
example/config/: config-d1.yml  config-d2.yml  config.yml  vdeck.yml
src/html/: chart-status.html  index.html
src/html/css/: style.css
src/html/js/: App.js  Help.js  (+1 more)
src/mydeck/: __init__.py  app_alert.py  app_bing_photo.py  app_calendar.py  app_clock.py  app_clock_digital.py  app_communicate_deck.py  app_dial_sample.py  app_doodle.py  app_open_action_bridge.py  app_stop_watch.py  app_sync_deck_page.py  app_totp.py  app_touchscreen_animation.py  app_touchscreen_quotes.py  app_touchscreen_sample.py  app_touchscreen_vmstat.py  app_trigger.py  app_weather_jp.py  app_web_server.py  app_window_check_linux.py  base.py  base_app.py  device_resilience.py  game_memory.py  game_random_number.py  game_tic_tack_toe.py  game_whac_a_mole.py  lock.py  my_decks.py  my_decks_app_base.py  my_decks_manager.py  my_decks_starter.py  test_my_decks.py  totp_account_manager.py  web_server.py  window_check_base.py
src/mystreamdeck/: 01_background_app_base.py  Calendar.py  Clock.py  Configure.py  GameMemory.py  GameTicTackToe.py  GameWhacAMole.py  __init__.py  _app_base.py  _base.py  _base_app.py  _my_decks.py  _window_check_base.py  alert.py  app_alert.py  app_base.py  app_calendar.py  app_clock.py  app_communicate_deck.py  app_stop_watch.py  app_sync_deck_page.py  app_trigger.py  app_weather_jp.py  app_web_server.py  app_window_check_linux.py  base.py  base_app.py  calendar.py  clock.py  communicate_deck.py  configure.py  game_memory.py  game_random_number.py  game_tic_tack_toe.py  game_whac_a_mole.py  memory.py  my_decks.py  random_number.py  stop_watch.py  stopwatch.py  (+5 more)
tests/: test_device_resilience.py  test_openaction_end_to_end.py  test_openaction_integration.py  test_plugin_resolution.py  test_totp_account_manager.py
tests/openaction/: test_bridge.py  test_context.py  test_manifest.py  test_protocol.py  test_registry.py  test_server.py  test_settings_store.py
(+17 files in other folders)
