[metadata]
name = 'mystreamdeck'
version = '0.1'
license = 'MIT'
description = 'Handling STREAM DECK deivce'
url = 'https://github.com/ktat/mystreamdeck'
author = 'Atsushi Kato'
author_email = 'ktat.is@gmail.com'

[build-system]
requires = 
  wand.image
  cairosvg

[options]
packages = 
  mystreamdeck
package_dir =
  mystreamdeck = src/mystreamdeck
zip_safe = False
