[metadata]
name = 'mydeck'
version = '0.1'
license = 'MIT'
description = 'Handling STREAM DECK deivce'
url = 'https://github.com/ktat/mydeck'
author = 'Atsushi Kato'
author_email = 'ktat.is@gmail.com'

[build-system]
requires = 
  wand.image
  cairosvg
  netifaces
  qrcode

[options]
packages = 
  mydeck
package_dir =
  mydeck = src/mydeck
zip_safe = False
